# docs/swagger.json
@@ -20,7 +20,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "EndPoints"
+                    "Get Data"
                 ],
                 "summary": "Get All",
                 "operationId": "all",
@@ -47,7 +47,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "EndPoints"
+                    "Get Data"
                 ],
                 "summary": "Get By Post Date",
                 "operationId": "date",
@@ -90,7 +90,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "EndPoints"
+                    "Get Data"
                 ],
                 "summary": "Get By Payment Narrative",
                 "operationId": "payment-narrative",
@@ -126,7 +126,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "EndPoints"
+                    "Get Data"
                 ],
                 "summary": "Get By Payment Type",
                 "operationId": "payment-type",
@@ -155,6 +155,27 @@
                 }
             }
         },
+        "/post_data": {
+            "post": {
+                "description": "Post all data",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Upload Data"
+                ],
+                "summary": "Post All",
+                "operationId": "post",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.ErrorMsg"
+                        }
+                    }
+                }
+            }
+        },
         "/status/{status}": {
             "get": {
                 "description": "get data by status",
@@ -162,7 +183,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "EndPoints"
+                    "Get Data"
                 ],
                 "summary": "Get By Status",
                 "operationId": "status",
@@ -198,7 +219,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "EndPoints"
+                    "Get Data"
                 ],
                 "summary": "Get By Terminal Id",
                 "operationId": "terminal-id",
@@ -234,7 +255,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "EndPoints"
+                    "Get Data"
                 ],
                 "summary": "Get By Transaction Id",
                 "operationId": "transaction-id",
